--- a/project/index.html
+++ b/project/index.html
@@ -4,5 +4,7 @@ title: Yanglan Wang
 ---
 <div class="blurb">
 	<h1>Project</h1>
-	<p>Project 1 <em>A Touch of Evil</em> Don't trust me. <a href="/about">Read more about my life...</a></p>
+    <!-- <p>Project 1 <em> Fire evacuation game <a href="/about">Read more about my life...</a></p> -->
+    <p>Project 1 <em> Fire evacuation game </p>
+
 </div><!-- /.blurb -->
