--- a/index.html
+++ b/index.html
@@ -4,5 +4,7 @@ title: Yanglan Wang
 ---
 <div class="blurb">
 	<h1>Hi there, I'm Yanglan!</h1>
-	<p>Hope I can share some useful information! <em> <a href="/about">Read more about my life...</a></p>
+	<!-- <p>Hope I can share some useful information! <em> <a href="/about">Read more about my life...</a></p> -->
+	<p>Hope I can share some useful information! </p>
+
 </div><!-- /.blurb -->
