--- a/project/index.html
+++ b/project/index.html
@@ -5,6 +5,21 @@ title: Yanglan Wang
 <div class="blurb">
 	<h1>Project</h1>
     <!-- <p>Project 1 <em> Fire evacuation game <a href="/about">Read more about my life...</a></p> -->
-    <p>Project 1 <em> Fire evacuation game </p>
+    <h2>Project 1 <em> Fire evacuation game </h2>
+        <p>Wildfires have become a chronic catastrophe in California with a rapidly changing risk landscape. 
+            We cannot rely solely on historical data and empirical solutions to form evacuation strategies; 
+            it must be admitted that changes in fire propagation patterns and different human 
+            behavior patterns depend on various variables (e.g., cellular network status,  road conditions, 
+            communication method).
+
+             Our research group has been investigating the socio-technological challenges faced by communities 
+             at the Wildland Urban Interface (WUI). And this game is to create a cost-effective method for 
+             stakeholders to participate in realistic evacuation drills,
+              an efficient data collection framework for gaining insight into behavioral and physical uncertainties, 
+              and a robust human-computer interaction platform for visualizing effective evacuation strategies.
+
+            We provided two versions of game(Windows and Mac), you can download from this 
+            <a href="https://github.com/bolinas-game/spatial_queue/releases/tag/game_20220815">link</a> and try it. For more information about background algorithm, 
+             <a href="https://github.com/bolinas-game/spatial_queue"> Read more about it</a></p>
 
 </div><!-- /.blurb -->
