--- a/project/index.html
+++ b/project/index.html
@@ -14,9 +14,9 @@ title: Yanglan Wang
         Their research explicitly improves large-scale vehicle sharing methods using subsequent information and proposes the concept
         of a ‘wait time threshold’ for a vehicle, to manage the constraint contradictions in this process. Based on a representative
          highdemand case of serving all inbound and outbound passengers at Shenzhen Bao’ an International Airport, a system with
-        consideration of subsequent information provides significant improvements comparing to a system without it.
+        consideration of subsequent information provides significant improvements comparing to a system without it.</p>
 
-        paper: <a href="https://trid.trb.org/view/1727013">https://trid.trb.org/view/1727013</a></p>
+        <p>paper: <a href="https://trid.trb.org/view/1727013">https://trid.trb.org/view/1727013</a></p>
 
 
     <h2>Project 2 <em> Fire evacuation game </h2>
@@ -31,9 +31,9 @@ title: Yanglan Wang
                 at the Wildland Urban Interface (WUI). And this game is to create a cost-effective method for 
                 stakeholders to participate in realistic evacuation drills,
                 an efficient data collection framework for gaining insight into behavioral and physical uncertainties, 
-                and a robust human-computer interaction platform for visualizing effective evacuation strategies.
+                and a robust human-computer interaction platform for visualizing effective evacuation strategies.</p>
 
-            We provided two versions of game(Windows and Mac), you can download from this 
+            <p>We provided two versions of game(Windows and Mac), you can download from this 
             <a href="https://github.com/bolinas-game/spatial_queue/releases/tag/game_20220815">link</a> and try it. For more information about background algorithm, 
                 <a href="https://github.com/bolinas-game/spatial_queue"> Read more about it</a></p>
 
