--- a/project/index.html
+++ b/project/index.html
@@ -20,7 +20,7 @@ title: Yanglan Wang
 
 
     <h2>Project 2 <em> Fire evacuation game </h2>
-        <img src="../images/game.png" alt="Italian Trulli">
+        <img src="../images/game.png" alt="game image", style="width:700px;height:500px;">
         <p>Wildfires have become a chronic catastrophe in California with a rapidly changing risk landscape. 
             We cannot rely solely on historical data and empirical solutions to form evacuation strategies; 
             it must be admitted that changes in fire propagation patterns and different human 
