--- a/project/index.html
+++ b/project/index.html
@@ -16,7 +16,8 @@ title: Yanglan Wang
          highdemand case of serving all inbound and outbound passengers at Shenzhen Bao’ an International Airport, a system with
         consideration of subsequent information provides significant improvements comparing to a system without it.</p>
 
-        <p>paper: <a href="https://trid.trb.org/view/1727013">https://trid.trb.org/view/1727013</a></p>
+        <p>paper: Dynamic real-time high-capacity ride-sharing model with subsequent information
+            <a href="https://trid.trb.org/view/1727013">https://trid.trb.org/view/1727013</a></p>
 
 
     <h2>Project 2 <em> Fire evacuation game </h2>
