--- a/project/index.html
+++ b/project/index.html
@@ -16,8 +16,8 @@ title: Yanglan Wang
          highdemand case of serving all inbound and outbound passengers at Shenzhen Bao’ an International Airport, a system with
         consideration of subsequent information provides significant improvements comparing to a system without it.</p>
 
-        <p>paper: Dynamic real-time high-capacity ride-sharing model with subsequent information
-            <a href="https://trid.trb.org/view/1727013">https://trid.trb.org/view/1727013</a></p>
+        <p>Paper: Dynamic real-time high-capacity ride-sharing model with subsequent information
+            <link href="https://trid.trb.org/view/1727013">https://trid.trb.org/view/1727013</link></p>
 
     <p></p>
     <h2>Project 2 <em> Fire evacuation game </h2>
@@ -35,14 +35,16 @@ title: Yanglan Wang
                 and a robust human-computer interaction platform for visualizing effective evacuation strategies.</p>
 
             <p>We provided two versions of game(Windows and Mac), you can download from this 
-            <a href="https://github.com/bolinas-game/spatial_queue/releases/tag/game_20220815">link</a> and try it. For more information about background algorithm, 
-                <a href="https://github.com/bolinas-game/spatial_queue"> Read more about it</a></p>
+            <link href="https://github.com/bolinas-game/spatial_queue/releases/tag/game_20220815">link</link> and try it. For more information about background algorithm, 
+                <link href="https://github.com/bolinas-game/spatial_queue"> Read more about it</link></p>
 
     <p></p>
     <h2>Project 3 <em> Fire systhesis algorithm </h2>
+        <img src="../images/fire_gif.gif" alt="fire synthesis", style="width:700px;height:500px;">
+
         <p>balabala
-            <a href="https://github.com/bolinas-game/spatial_queue/releases/tag/game_20220815">link</a> and try it. For more information about background algorithm, 
-                <a href="https://github.com/bolinas-game/spatial_queue"> Read more about it</a></p>
+            <link href="https://github.com/bolinas-game/spatial_queue/releases/tag/game_20220815">link<link> and try it. For more information about background algorithm, 
+                <link href="https://github.com/bolinas-game/spatial_queue"> Read more about it</link></p>
 
 
 </div><!-- /.blurb -->
