--- a/index.html
+++ b/index.html
@@ -4,15 +4,20 @@ title: Yanglan Wang
 ---
 <div class="blurb">
 	<h1>About me</h1>
-	<!-- <p>Hope I can share some useful information! <em> fslj<a href="/about">Read more about my life...</a></p> -->
+	<style>
+		#one{margin: 0 auto;text-align: center;}
+	</style>
+
+	<img src="./images/intro.jpg" alt="fire synthesis", style="width:500px;height:300px;", id="one"  >
 	<p>I am a Ph.D. candidate at UC Berkeley advised by Prof. Kenichi Soga.
 		 Prior to this, I obtained my bachelor degree from North China Electric Power University (Beijing)
 		 and master degree from Tsinghua University.
-
+	</p>
+	<p>
 		My research direction lies in traffic control, optimization and simulation. I did project on vehicle 
 		ridesharing algorithm, fire evacuation algorithm and micro traffic simulation previously. I explore how
 		to use reinforcement learning to optimize the vehicle' s movement recently.
-		
+
 		I am also interested in visualization methods and game design.
 	</p>
 
