--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ title: Yanglan Wang
 <div class="blurb">
 	<h1>About me</h1>
 	<style>
-		#one{margin: 0 auto;text-align: center;}
+		#one{text-align: center;}
 	</style>
 
 	<img src="./images/intro.jpg" alt="fire synthesis", style="width:500px;height:300px;", id="one"  >
