--- a/project/index.html
+++ b/project/index.html
@@ -15,7 +15,7 @@ title: Yanglan Wang
         of a ‘wait time threshold’ for a vehicle, to manage the constraint contradictions in this process. Based on a representative
          highdemand case of serving all inbound and outbound passengers at Shenzhen Bao’ an International Airport, a system with
         consideration of subsequent information provides significant improvements comparing to a system without it.</p>
-
+    <p>Corporator: YiZhang</p>
         <p>Paper: Dynamic real-time high-capacity ride-sharing model with subsequent information
             <a href="https://trid.trb.org/view/1727013">https://trid.trb.org/view/1727013</a></p>
 
@@ -37,14 +37,21 @@ title: Yanglan Wang
             <p>We provided two versions of game(Windows and Mac), you can download from this 
             <a href="https://github.com/bolinas-game/spatial_queue/releases/tag/game_20220815">link</a> and try it. For more information about background algorithm, 
                 <a href="https://github.com/bolinas-game/spatial_queue"> Read more about it</a></p>
+                <p>Corporator: Prof. Kenichi Soga, Bingyu Zhao, Paola</p>
 
     <p></p>
     <h2>Project 3 <em> Fire systhesis algorithm </h2>
         <img src="../images/fire_gif.gif" alt="fire synthesis", style="width:700px;height:500px;">
 
-        <p>balabala
-            <a href="https://github.com/bolinas-game/spatial_queue/releases/tag/game_20220815">link<a> and try it. For more information about background algorithm, 
-                <a href="https://github.com/bolinas-game/spatial_queue"> Read more about it</a></p>
+        <p>
+            Many existing example-based discrete texture synthesis methods are effective in generating textures that are similar with 
+            exemplar. But for texture with many objects, they lead to the repetitive patterns in synthesized texture. 
+            However, in some circumstances, people need to synthesize object with different shape and color, 
+            especially for object with inhomogeneous texture and dynamic shape, such as fire or cloud. Our research proposed algorithm 
+            that can automatically synthesize textures with different shape, but they also retain the same edge and texture
+             attributes with input sample.
+        </p>
+        <p>Corporator: Prof. Kenichi Soga, Kecheng Chen</p>
 
 
 </div><!-- /.blurb -->
