edit image' s position

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ title: Yanglan Wang
 		#one{text-align: center;}
 	</style>
 
-	<img src="./images/intro.jpg" alt="fire synthesis", style="width:500px;height:300px;", id="one"  >
+	<img src="./images/intro.jpg" alt="fire synthesis", style="width:500px;height:300px;text-align:center;", id="one"  >
 	<p>I am a Ph.D. candidate at UC Berkeley advised by Prof. Kenichi Soga.
 		 Prior to this, I obtained my bachelor degree from North China Electric Power University (Beijing)
 		 and master degree from Tsinghua University.
