--- a/project/index.html
+++ b/project/index.html
@@ -15,9 +15,13 @@ title: Yanglan Wang
         of a ‘wait time threshold’ for a vehicle, to manage the constraint contradictions in this process. Based on a representative
          highdemand case of serving all inbound and outbound passengers at Shenzhen Bao’ an International Airport, a system with
         consideration of subsequent information provides significant improvements comparing to a system without it.</p>
-    <p>Corporator: YiZhang</p>
+    <p>Collaborator: Yi Zhang</p>
         <p>Paper: Dynamic real-time high-capacity ride-sharing model with subsequent information
             <a href="https://trid.trb.org/view/1727013">https://trid.trb.org/view/1727013</a></p>
+        <p>Dynamic Real-Time High-Capacity Ride Sharing Model for Airport Access
+            <a href="https://trid.trb.org/view/1727013">https://trid.trb.org/view/1756670</a>
+        </p>
+
 
     <p></p>
     <h2>Project 2 <em> Fire evacuation game </h2>
@@ -37,7 +41,7 @@ title: Yanglan Wang
             <p>We provided two versions of game(Windows and Mac), you can download from this 
             <a href="https://github.com/bolinas-game/spatial_queue/releases/tag/game_20220815">link</a> and try it. For more information about background algorithm, 
                 <a href="https://github.com/bolinas-game/spatial_queue"> Read more about it</a></p>
-                <p>Corporator: Prof. Kenichi Soga, Bingyu Zhao, Paola</p>
+                <p>Collaborator: Prof. Kenichi Soga, Bingyu Zhao, Paola Lorusso</p>
 
     <p></p>
     <h2>Project 3 <em> Fire systhesis algorithm </h2>
@@ -51,7 +55,7 @@ title: Yanglan Wang
             that can automatically synthesize textures with different shape, but they also retain the same edge and texture
              attributes with input sample.
         </p>
-        <p>Corporator: Prof. Kenichi Soga, Kecheng Chen</p>
+        <p>Collaborator: Prof. Kenichi Soga, Kecheng Chen</p>
 
 
 </div><!-- /.blurb -->
